--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         multiDexEnabled true
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -114,6 +114,9 @@ dependencies {
     implementation 'net.alexandroid.utils:exoplayerhelper:2.18'
     implementation 'com.github.igalata:Bubble-Picker:v0.2.4'
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
+    //Enabled for amazon pay
+    implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.razorpay:checkout:1.5.16'
     implementation "com.github.StephenVinouze:MaterialNumberPicker:1.1.0"
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'org.apache.commons:commons-collections4:4.1'
