--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:name=".AppController"
         android:allowBackup="true"
         android:appComponentFactory="whateverString"
-        android:icon="@drawable/app_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/app_icon"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -53,7 +53,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
-            android:name=".ActivityUtil.Checkout"
+            android:name=".ActivityUtil.CheckoutActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
@@ -173,6 +173,13 @@
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <!-- Add your API key here -->
+
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="rzp_live_gChndEgL0Bww2J"/>
+
     </application>
 
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" /> <!-- used for drawing widget. This permission must be granted before calling AudioWidget.show(). -->
@@ -196,5 +203,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
+
+
 
 </manifest>
