--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".ActivityUtil.RestaurantInformation"/>
+        <activity android:name=".ActivityUtil.RestaurantInformation" />
         <activity android:name=".ActivityUtil.PlaceSelectionPluginActivity" />
         <activity android:name=".ActivityUtil.TrackOrder" />
         <activity android:name=".ActivityUtil.ProductDetail" />
@@ -92,9 +92,9 @@
         <activity
             android:name=".ActivityUtil.ForgotPassword"
             android:screenOrientation="portrait" />
-    <!--    <activity
-            android:name=".ActivityUtil.CustomNotificationOpener"
-            android:screenOrientation="portrait" />-->
+        <!--    <activity
+                android:name=".ActivityUtil.CustomNotificationOpener"
+                android:screenOrientation="portrait" />-->
 
         <activity android:name=".ActivityUtil.DeeplinkViewer">
             <intent-filter>
@@ -178,7 +178,7 @@
 
         <meta-data
             android:name="com.razorpay.ApiKey"
-            android:value="rzp_live_gChndEgL0Bww2J"/>
+            android:value="rzp_live_gChndEgL0Bww2J" />
 
     </application>
 
@@ -190,6 +190,7 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -203,8 +204,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
-
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 
 </manifest>
