--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
+            android:name=".GalleryActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".FragmentUtil.Favourites"
             android:screenOrientation="portrait" />
         <activity
