--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:node="replace"
+        tools:targetApi="m">
 
         <activity android:name=".ActivityUtil.RestaurantInformation" />
         <activity android:name=".ActivityUtil.PlaceSelectionPluginActivity" />
@@ -115,7 +117,7 @@
                      android:pathPrefix="/food_delivery"
                      android:scheme="https" />
              </intent-filter>
-         </activity>-->
+         </activity>
 
         <activity
             android:name="com.facebook.CustomTabActivity"
@@ -128,7 +130,7 @@
 
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
-        </activity>
+        </activity>-->
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -140,11 +142,11 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.MEDIA_BUTTON" />
-            </intent-filter>
-        </receiver>
+        <!-- <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
+             <intent-filter>
+                 <action android:name="android.intent.action.MEDIA_BUTTON" />
+             </intent-filter>
+         </receiver>-->
 
         <service
             android:name=".ServiceUtil.MyIntentService"
